fix: fixed popup width, tag gaps, tag close button padding

--- a/src/styles/_reactTags.scss
+++ b/src/styles/_reactTags.scss
@@ -30,19 +30,27 @@
 }
 
 /* Styles for selected tags */
-.ReactTags__selected span.ReactTags__tag {
-  @extend .btn;
-  @extend .btn-dark;
-  background: #333A3D;
-  margin: 0 5px;
-  :hover{
+.ReactTags__selected {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+
+  span.ReactTags__tag {
+    @extend .btn;
+    @extend .btn-dark;
+    padding: 0.375rem 0.375rem 0.375rem 0.75rem;
     background: #333A3D;
+    :hover{
+      background: #333A3D;
+    }
   }
-}
-.ReactTags__selected a.ReactTags__remove {
-  color: #aaa;
-  margin-left: 5px;
-  cursor: pointer;
+
+  a.ReactTags__remove {
+    color: #aaa;
+    margin-left: 5px;
+    cursor: pointer;
+  }
 }
 
 /* Styles for suggestions */
@@ -71,6 +79,7 @@
 }
 
 .ReactTags__remove {
+  margin-left: 5px;
   border: none;
   cursor: pointer;
   background: none;
